--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,68 @@
+---
+import { ClientRouter } from "astro:transitions";
+import background from "../assets/background.svg";
+
+// Supports weights 100-900
+import "@fontsource-variable/geist-mono";
+import "@fontsource/geist-sans/400.css";
+
+interface Props {
+  title: string;
+}
+
+const { title } = Astro.props;
+---
+
 <!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/favicon.svg"
+    />
+    <meta
+      name="generator"
+      content={Astro.generator}
+    />
+    <title>{title}</title>
+    <ClientRouter />
+  </head>
+  <body>
+    <main class="min-h-screen">
+      <img
+        id="background"
+        src={background.src}
+        alt=""
+        fetchpriority="high"
+      />
+      <slot />
+    </main>
+  </body>
 </html>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+<style is:global>
+  @import "tailwindcss";
+  @import "../styles/global.css";
+  @plugin "@midudev/tailwind-animations";
 </style>
+
+<style>
+  html,
+  body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    font-family: sans-serif;
+
+    /* font-family: "Geist Sans", "Geist Mono Variable"; */
+    /* font-family: sans-serif; */
+  }
+</style>
+
+
