--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -4,7 +4,7 @@ import { Image } from "astro:assets";
 import logo from "../../assets/logo-completo.png";
 ---
 
-<footer class="bg-primary text-primary-foreground">
+<footer class="bg-card text-slate-600">
   <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-12">
     <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
       {/* Company Info */}
@@ -18,9 +18,9 @@ import logo from "../../assets/logo-completo.png";
             width="80"
           />
         </div>
-        <p class="text-primary-foreground/80 mb-4 text-pretty">
+        <p class="text-slate-600/80 mb-4 text-pretty">
           Expertos en Seguridad y Salud en el Trabajo con más de 10 años de
-          experiencia. <br> Protegemos a tu empresa y trabajadores con soluciones
+          experiencia. <br /> Protegemos a tu empresa y trabajadores con soluciones
           integrales en SST.
         </p>
         <div class="space-y-2">
@@ -30,7 +30,7 @@ import logo from "../../assets/logo-completo.png";
               name="phone"
               size="20"
             />
-            <span class="text-sm">+57 (1) 234-5678</span>
+            <span class="text-sm">+57 3146816353</span>
           </div>
           <div class="flex items-center space-x-2">
             <!-- <Mail class="h-4 w-4" /> -->
@@ -38,7 +38,7 @@ import logo from "../../assets/logo-completo.png";
               name="mail"
               size="20"
             />
-            <span class="text-sm">info@sst360.com</span>
+            <span class="text-sm">asesoriasvg.sst@gmail.com</span>
           </div>
           <div class="flex items-center space-x-2">
             <!-- <MapPin class="h-4 w-4" /> -->
@@ -54,7 +54,7 @@ import logo from "../../assets/logo-completo.png";
       {/* Services */}
       <div>
         <h3 class="font-semibold mb-4">Servicios</h3>
-        <ul class="space-y-2 text-sm text-primary-foreground/80">
+        <ul class="space-y-2 text-sm text-slate-600/80">
           <li>Trabajos de Alto Riesgo</li>
           <li>Trabajo en Alturas</li>
           <li>Trabajos Eléctricos</li>
@@ -67,7 +67,7 @@ import logo from "../../assets/logo-completo.png";
       {/* Company */}
       <div>
         <h3 class="font-semibold mb-4">Empresa</h3>
-        <ul class="space-y-2 text-sm text-primary-foreground/80">
+        <ul class="space-y-2 text-sm text-slate-600/80">
           <li>
             <a
               href="#nosotros"
@@ -105,7 +105,7 @@ import logo from "../../assets/logo-completo.png";
     </div>
 
     <div class="border-t border-primary-foreground/20 mt-8 pt-8 text-center">
-      <p class="text-sm text-primary-foreground/60">
+      <p class="text-sm text-slate-900/60">
         © 2025 SST360. Todos los derechos reservados. | Seguridad y Salud en el
         Trabajo
       </p>
