--- a/src/components/ui/Hero.astro
+++ b/src/components/ui/Hero.astro
@@ -1,5 +1,6 @@
 ---
 import { Icon } from "astro-icon/components";
+import { MotionWrapper } from "./MotionWrapper";
 ---
 
 <section
@@ -7,7 +8,13 @@ import { Icon } from "astro-icon/components";
   class="relative py-20 lg:py-32"
 >
   <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-    <div class="max-w-4xl mx-auto text-center animate-zoom-in">
+    <MotionWrapper
+      client:visible
+      initial={{ opacity: 0, y: 30 }}
+      whileInView={{ opacity: 1, y: 0 }}
+      transition={{ duration: 0.6, ease: "easeOut" }}
+      className="max-w-4xl mx-auto text-center"
+    >
       <h1
         class="text-4xl md:text-6xl font-bold text-primary mb-6 tracking-wide"
       >
@@ -28,9 +35,9 @@ import { Icon } from "astro-icon/components";
 
       <div class="flex flex-col sm:flex-row gap-4 justify-center mb-12">
         <a
-          href="https://wa.link/p8ajyx"
-          type="button"
-          class="group flex gap-2 items-center justify-center bg-gradient-to-r from-[#0B4791] to-[#69B4BB] hover:from-[#0B4791]/90 hover:to-[#69B4BB]/90 text-accent-foreground text-sm font-medium rounded-md px-4 py-3 cursor-pointer shadow-lg shadow-[#69B4BB] active:shadow-md active:scale-95 transition-transform tracking-wide"
+          href="https://wa.link/7d7t3e"
+          target="_blank"
+          class="group flex gap-2 items-center justify-center bg-gradient-to-r from-[#0B4791] to-[#69B4BB] hover:from-[#0B4791]/90 hover:to-[#69B4BB]/90 text-accent-foreground text-sm font-medium rounded-md px-4 py-3 cursor-pointer shadow-md lg:shadow-lg shadow-[#69B4BB] active:shadow-md active:scale-95 transition-transform tracking-wide"
         >
           Solicitar Consulta Gratuita
           <Icon
@@ -39,12 +46,12 @@ import { Icon } from "astro-icon/components";
             class="transition-transform duration-300 ease-out group-hover:translate-x-1 group-hover:rotate-6"
           />
         </a>
-        <button
-          type="button"
-          class="bg-transparent hover:bg-gray-200/90 text-sm font-medium text-black rounded-md px-4 py-3 cursor-pointer shadow-xl/20 active:shadow-xl active:scale-95 transition-transform duration-300 ease-out border border-gray-300 tracking-wide"
+        <a
+        href="#servicios"
+        class="bg-transparent hover:bg-gray-200/90 text-sm font-medium text-black rounded-md px-4 py-3 cursor-pointer shadow-lg/20 lg:shadow-xl/20 active:shadow-xl active:scale-95 transition-transform duration-300 ease-out border border-gray-300 tracking-wide"
         >
           Ver Nuestros Servicios
-        </button>
+        </a>
       </div>
 
       {/* Trust Indicators */}
@@ -80,6 +87,6 @@ import { Icon } from "astro-icon/components";
           >
         </div>
       </div>
-    </div>
+    </MotionWrapper>
   </div>
 </section>
