--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -5,6 +5,7 @@ import Service from "./ui/Service.astro";
 import Partners from "./ui/Partners.astro";
 import About from "./ui/About.astro";
 import Footer from "./ui/Footer.astro";
+import Contact from "./ui/Contact.astro";
 
 ---
 <Navbar />
@@ -12,4 +13,5 @@ import Footer from "./ui/Footer.astro";
 <Service />
 <Partners/>
 <About />
+<Contact/>
 <Footer/>
